--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <button onclick="showProfile()" id="profile-btn"><img id="profile" src="./src/assets/icons/profile-dark.svg" alt=""></button>
         </div>
     </header>
-    <section class="hero">
+    <div id="loader"></div>
+    <section id="hero" class="hero">
         <div class="left">
             <div class="hero-text">
                 <h1 id="text-1">Today's Good Mood is</h1> 
