--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
         <div class="right"><img class="coffee-cup" src="./src/assets/IMG/Coffee-cup.png" alt="coffee-cup"></div>
     </section>
-    <script src="./index.js"></script>
+    <img id="bgImg" src="./src/assets/IMG/wooden.jpg" alt="">
+    <script src="./index.js" async></script>
 </body>
 </html>
