--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <button onclick="showProfile()" id="profile-btn"><img id="profile" src="./src/assets/icons/profile-dark.svg" alt=""></button>
         </div>
     </header>
-    <div id="loader"></div>
+    <div id="loader">
+        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+    </div>
     <section id="hero" class="hero">
         <div class="left">
             <div class="hero-text">
