--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                         <h2>90 da</h2>
                     </div>
                     <div class="item">
+                        <h2>Chocolate and Milk</h2>
+                        <h2>100 da</h2>
+                    </div>
+                    <div class="item">
                         <h2>Milk</h2>
                         <h2>40 da</h2>
                     </div>
