--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
             <button onclick="location.href = '#contact'">Contact</button>
         </nav>
         <div class="right">
-            <button onclick="toggleDark()" id="toggle-dark-btn" class="toggle-dark"><img id="toggle-dark"
-                    src="./src/assets/icons/dark.svg" alt=""></button>
-            <button onclick="showProfile()" id="profile-btn"><img id="profile" src="./src/assets/icons/profile-dark.svg"
-                    alt=""></button>
+            <button onclick="toggleDark()" id="toggle-dark-btn" class="toggle-dark"><img id="toggle-dark" src="./src/assets/icons/dark.svg" alt=""></button>
+            <button onclick="showProfile()" id="profile-btn" class="profile-btn"><img id="profile" src="./src/assets/icons/profile-dark.svg" alt=""></button>
+            <button class="menu-icon"><img id="menu-icon" src="./src/assets/icons/menu-dark.svg" alt=""></button>
         </div>
     </header>
     <div id="loader">
