--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <button onclick="location.href = '#contact'">Contact</button>
         </nav>
         <div class="right">
-            <button onclick="toggleDark()" id="toggle-dark-btn" class="toggle-dark"><img id="toggle-dark" src="./src/assets/icons/dark.svg" alt=""></button>
-            <button onclick="showProfile()" id="profile-btn" class="profile-btn"><img id="profile" src="./src/assets/icons/profile-dark.svg" alt=""></button>
+            <button onclick="toggleDark()" id="toggle-dark-btn" class="toggle-dark"><img id="toggle-dark"
+                    src="./src/assets/icons/dark.svg" alt=""></button>
+            <button onclick="showProfile()" id="profile-btn" class="profile-btn"><img id="profile"
+                    src="./src/assets/icons/profile-dark.svg" alt=""></button>
             <button class="menu-icon"><img id="menu-icon" src="./src/assets/icons/menu-dark.svg" alt=""></button>
         </div>
     </header>
@@ -237,42 +239,38 @@
                 <img src="./src/assets/Gallery/15.jpg" alt="">
 
                 <img src="./src/assets/Gallery/03.jpg" alt="">
-                <!-- <img src="./src/assets/Gallery/02.jpg" alt=""> -->
 
             </div>
 
             <div id="page2" class="page2 hidden-page">
-                <div class="row1">
-                    <img src="./src/assets/Gallery/13.jpg" alt="">
-                    <img src="./src/assets/Gallery/18.jpg" alt="">
-                    <img src="./src/assets/Gallery/04.jpg" alt="">
-                </div>
 
-                <div class="row2">
-                    <img src="./src/assets/Gallery/12.jpg" alt="">
-                    <img src="./src/assets/Gallery/11.jpg" alt="">
-                </div>
+                <img src="./src/assets/Gallery/14.jpg" alt="">
+                <img src="./src/assets/Gallery/12.jpg" alt="">
+                <img src="./src/assets/Gallery/18.jpg" alt="">
+                <img src="./src/assets/Gallery/11.jpg" alt="">
+                <img src="./src/assets/Gallery/13.jpg" alt="">
+                <img src="./src/assets/Gallery/04.jpg" alt="">
 
-                <div class="row3">
-                    <img src="./src/assets/Gallery/07.jpg" alt="">
-                    <img src="./src/assets/Gallery/17.jpg" alt="">
-                </div>
+                <!-- <img src="./src/assets/Gallery/17.jpg" alt=""> -->
+
+
+
+
+
             </div>
 
             <div id="page3" class="page3 hidden-page">
-                <div class="row1">
-                    <img src="./src/assets/Gallery/05.jpg" alt="">
-                    <img src="./src/assets/Gallery/16.jpg" alt="">
-                </div>
 
-                <div class="row2">
-                    <img src="./src/assets/Gallery/01.jpg" alt="">
-                </div>
+                <img src="./src/assets/Gallery/02.jpg" alt="">
+                <img src="./src/assets/Gallery/01.jpg" alt="">
+                <img src="./src/assets/Gallery/07.jpg" alt="">
 
-                <div class="row3">
-                    <img src="./src/assets/Gallery/19.jpg" alt="">
-                    <img src="./src/assets/Gallery/14.jpg" alt="">
-                </div>
+                <img src="./src/assets/Gallery/16.jpg" alt="">
+                <img src="./src/assets/Gallery/05.jpg" alt="">
+
+                <img src="./src/assets/Gallery/19.jpg" alt="">
+                
+
             </div>
             <div class="switchers">
                 <button onclick="switchToPage(1)" id="switcher-1" class="active-switcher"><span>1</span></button>
