--- a/index.html
+++ b/index.html
@@ -306,6 +306,58 @@
         </div>
     </section>
 
+    <hr/>
+    <a id="contact"></a>
+    <section id="contact" class="contact">
+        
+        <div class="contactInfo">
+            <div class="contact-title">
+                <h1>Contact</h1>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa fa-solid fa-map-pin"></i></div>
+                <div class="text">
+                    <h3>Address</h3>
+                    <p>Hai El Akid Lotfi,<br> Bir El Djir Oran</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa fa-solid fa-phone"></i></div>
+                <div class="text">
+                    <h3>Phone Number</h3>
+                    <p>+213 (0)557 37 32 99 <br/> +213 (0)669 69 69 69</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa fa-solid fa-envelope"></i></div>
+                <div class="text">
+                    <h3>Email</h3>
+                    <p>contact@Starbeans.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="contactForm">
+            <form>
+                <h2>Send a Message</h2>
+                <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span>Full Name</span>
+                </div>
+                <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span>Email</span>
+                </div>
+                <br>
+                <div class="inputBox">
+                    <Textarea required="required"></Textarea>
+                    <span>Type your Message...</span>
+                </div>
+                <div class="inputBox submit-contact">
+                    <input type="submit" name="Envoyer" value="Send">
+                </div>
+            </form>
+        </div>
+    </section>
 
     <!------------- Footer -------------------------->
     <div class="footer-dark" style="font-family: Inter;">
