login (near final)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <div class="menu-header">
             <nav id="nav-bar-menu" class="nav-bar-menu">
-                <button onclick="showProfile()" id="profile-btn" class="profile-btn-menu"><img id="profile-menu"
+                <button onclick="location.href='./src/pages/login.html'" id="profile-btn" class="profile-btn-menu"><img id="profile-menu"
                     src="./src/assets/icons/profile-light.svg" alt=""></button>
                 <button class="active" onclick="location.href = './index.html'">Home</button>
                 <button onclick="location.href = '#about-us'">About</button>
@@ -52,7 +52,7 @@
         <div class="right">
             <button onclick="toggleDark()" id="toggle-dark-btn" class="toggle-dark"><img id="toggle-dark"
                     src="./src/assets/icons/dark.svg" alt=""></button>
-            <button onclick="showProfile()" id="profile-btn" class="profile-btn"><img id="profile"
+            <button onclick="location.href='./src/pages/login.html'" id="profile-btn" class="profile-btn"><img id="profile"
                     src="./src/assets/icons/profile-dark.svg" alt=""></button>
             <button onclick="openNavMenu();" class="menu-icon"><img id="menu-icon" src="./src/assets/icons/menu-dark.svg" alt=""></button>
             
@@ -308,7 +308,7 @@
 
     <hr/>
     <a id="contact"></a>
-    <section id="contact" class="contact">
+    <section class="contact">
         
         <div class="contactInfo">
             <div class="contact-title">
