--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="header-logo" src="./src/assets/logo/Starbeans-logo-line-dark.svg" alt="">
         </div>
         <nav class="nav-bar">
-            <button class="active" onclick="location.href = './index.html'">Home</button>
+            <button class="active" onclick="location.href = '#'">Home</button>
             <button onclick="location.href = '#about-us'">About</button>
             <button onclick="location.href = '#menu'">Menu</button>
             <button onclick="location.href = '#gallery'">Gallery</button>
@@ -42,7 +42,7 @@
             <nav id="nav-bar-menu" class="nav-bar-menu">
                 <button onclick="location.href='./src/pages/login.html'" id="profile-btn" class="profile-btn-menu"><img id="profile-menu"
                     src="./src/assets/icons/profile-light.svg" alt=""></button>
-                <button class="active" onclick="location.href = './index.html'">Home</button>
+                <button class="active" onclick="location.href = '#'">Home</button>
                 <button onclick="location.href = '#about-us'">About</button>
                 <button onclick="location.href = '#menu'">Menu</button>
                 <button onclick="location.href = '#gallery'">Gallery</button>
@@ -297,7 +297,7 @@
                             class="fa fa-instagram  fa-inverse icon-about"></i></a>
                     <a href="https://www.facebook.com/" target="_blank"><i
                             class="fa fa-facebook  fa-inverse icon-about"></i></a>
-                    <a href="https://goo.gl/maps/" target="_blank"><i
+                    <a href="https://www.google.com/maps/" target="_blank"><i
                             class="fa fa-map-marker fa-inverse icon-about"></i></a>
 
                 </div>
@@ -406,7 +406,7 @@
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse icon"></i>
                             </span>
                         </a>
-                        <a href="https://goo.gl/maps/" target="_blank">
+                        <a href="https://www.google.com/maps/" target="_blank">
                             <span class="fa-stack fa-lg yt combo">
                                 <i class="fa fa-circle fa-stack-2x circle"></i>
                                 <i class="fa fa-map-marker fa-stack-1x fa-inverse icon"></i>
